# CPPJourney

./: .clang-format  .gitignore  README.md  Roadmap.md
.cursor/rules/: tutor.mdc
phase0/step1/: exercises.md  quick-reference.md  quiz-step1.md  step0.1.md
phase0/step1/exercise0/: hello  hello.cpp
phase0/step1/exercise1-compiler-comparison/: buggy.cpp  buggy_clang23  buggy_gcc
phase0/step1/exercise2-cmake-project-structure/: CMakeLists.txt
phase0/step1/exercise2-cmake-project-structure/include/: calculator.h
phase0/step1/exercise2-cmake-project-structure/src/: calculator.cpp  main.cpp
phase0/step1/exercise3-debugging-practice/: debug_me  debug_me.cpp  debug_me_cpp20
phase0/step1/exercise4-formatting/: .clang-format  ugly-after.cpp
phase0/step1/exercise5-static-analysis/: analyze_me  analyze_me.cpp
phase0/step1/hello-world/: CMakeLists.txt
phase0/step1/hello-world/src/: main.cpp
phase0/step2/: quick-reference.md  quiz-step0.2.md  step0.2.md
phase0/step3/: exercises.md  quick-reference.md  quiz-step0.3.md  step0.3.md
phase1/: exercises.md  quick-reference.md  solutions.md  step1.1.md
phase1/step1/: quiz-step1.1.md  step1.1.md
phase1/step1/exercise1-basic-market-data/: basic_markte_data.cpp  program
phase1/step1/exercise2-order-processing-system/: order_processing_system.cpp  program
phase1/step1/exercise4-logging-and-io/: CMakeLists.txt  log  logging.cpp  market_data.csv
phase1/step2/: exercises.md  quick-reference.md  quiz-step1.2.md  solutions.md  step1.2.md
phase1/step3/: exercises.md  quick-reference.md  quiz-step1.3.md  step1.3.md
(+1 files in other folders)
